--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cqcl/quantinuum-ui": "^1.26.5",
+    "@tanstack/react-query": "^5.71.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
