--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@cqcl/quantinuum-ui": "^1.26.5",
+    "@radix-ui/react-icons": "^1.3.2",
     "@tanstack/react-query": "^5.71.1",
+    "@tanstack/react-router": "^1.114.33",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tanstack/react-router-devtools": "^1.114.33",
+    "@tanstack/router-plugin": "^1.114.33",
+    "@types/node": "^22.14.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
